# cfn-tailscale-ec2-instance

./: Makefile  README.md  buildspec.yml  pyproject.toml
cfn_tailscale_ec2_instance/: main.py
cfn_tailscale_ec2_instance/utils/: sanitise_properties.py
ci/: codepipeline.yml
scripts/: pipeline.sh
stacks/service-catalog-account/: cfn-tailscale-ec2-instance.yml  parameters.json
