[tool.poetry]
name = "cfn-tailscale-ec2-instance"
version = "0.0.0"
description = "CloudFormation custom resource for an EC2 instance configured with tailscale"
authors = ["Alex Chesters <alex@cheste.rs>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = "^2.30.2"
crhelper = "^2.0.11"
boto3 = "^1.34.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
